# gstreamer-opencv-example

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pipeline.py  poetry.lock.license  poetry.toml  pyproject.toml
