# MIT License
#
# Copyright (c) 2024 ardroh
#
# Permission is granted to use, copy, modify, and distribute this software with
# attribution to the original author.

[tool.poetry]
name = "python-pipeline"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Drohomirecki <ardroh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<4.0"
pygobject = "^3.50.0"
opencv-python = "^4.10.0.84"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
